implementations/python/src/velocitron/dsl/generated/VelocitronPetriNetParser.py
# Generated from VelocitronPetriNet.g4 by ANTLR 4.13.2
# encoding: utf-8
# ruff: noqa: F403, F405
from antlr4 import *
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class VelocitronPetriNetParser(Parser):
    grammarFileName = "VelocitronPetriNet.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'net'",
        "'composition'",
        "'use'",
        "'as'",
        "'wire'",
        "'port'",
        "'input'",
        "'output'",
        "'handler'",
        "'guard'",
        "'order'",
        "'timer'",
        "'clock'",
        "'bind'",
        "'maturity'",
        "'priority'",
        "'accepts'",
        "'capacityPerColorKey'",
        "'weight'",
        "'data'",
        "'predicate'",
        "'cel'",
        "'correlate'",
        "'marking'",
        "'initial'",
        "'description'",
        "'annotation'",
        "'extensions'",
        "'view'",
        "'position'",
        "'route'",
        "'at'",
        "'orthogonal'",
        "'true'",
        "'false'",
        "'null'",
        "'@'",
        "'('",
        "')'",
        "'['",
        "']'",
        "'{'",
        "'}'",
        "'-'",
        "'->?'",
        "'->0'",
        "'->'",
        "'<-'",
        "'$'",
        "'*'",
        "':'",
        "','",
        "'.'",
        "<INVALID>",
        "'0'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'\\r\\n'",
    ]

    symbolicNames = [
        "<INVALID>",
        "NET",
        "COMPOSITION",
        "USE",
        "AS",
        "WIRE",
        "PORT",
        "INPUT",
        "OUTPUT",
        "HANDLER",
        "GUARD",
        "ORDER",
        "TIMER",
        "CLOCK",
        "BIND",
        "MATURITY",
        "PRIORITY",
        "ACCEPTS",
        "CAPACITY_PER_COLOR_KEY",
        "WEIGHT",
        "DATA",
        "PREDICATE",
        "CEL",
        "CORRELATE",
        "MARKING",
        "INITIAL",
        "DESCRIPTION",
        "ANNOTATION",
        "EXTENSIONS",
        "VIEW",
        "POSITION",
        "ROUTE",
        "AT_KEYWORD",
        "ORTHOGONAL",
        "TRUE",
        "FALSE",
        "NULL",
        "AT",
        "LPAREN",
        "RPAREN",
        "LBRACK",
        "RBRACK",
        "LBRACE",
        "RBRACE",
        "HYPHEN",
        "READ_ARROW",
        "INHIBIT_ARROW",
        "ARROW",
        "LEFT_ARROW",
        "DOLLAR",
        "STAR",
        "COLON",
        "COMMA",
        "DOT",
        "POSITIVE_INTEGER",
        "ZERO",
        "NUMBER",
        "STRING",
        "IDENT",
        "LINE_COMMENT",
        "BLOCK_COMMENT",
        "WS",
        "CRLF",
        "UNSUPPORTED",
    ]

    RULE_document = 0
    RULE_netHeader = 1
    RULE_compositionHeader = 2
    RULE_compositionUse = 3
    RULE_compositionWire = 4
    RULE_chain = 5
    RULE_chainNode = 6
    RULE_arcSegment = 7
    RULE_arcOperator = 8
    RULE_additionalChain = 9
    RULE_chainHandle = 10
    RULE_place = 11
    RULE_transition = 12
    RULE_placeDeclaration = 13
    RULE_transitionDeclaration = 14
    RULE_placePort = 15
    RULE_portDirection = 16
    RULE_transitionHandler = 17
    RULE_additionalTransitionHandler = 18
    RULE_transitionGuard = 19
    RULE_transitionTimer = 20
    RULE_transitionTimerBind = 21
    RULE_transitionTimerMaturity = 22
    RULE_timerBindName = 23
    RULE_transitionPriority = 24
    RULE_transitionOrder = 25
    RULE_chainOrder = 26
    RULE_placeAccepts = 27
    RULE_placeCapacity = 28
    RULE_arcWeight = 29
    RULE_arcData = 30
    RULE_arcPredicate = 31
    RULE_arcCorrelate = 32
    RULE_predicateKind = 33
    RULE_positiveInteger = 34
    RULE_nonnegativeInteger = 35
    RULE_initialMarking = 36
    RULE_additionalInitialMarking = 37
    RULE_namedMarking = 38
    RULE_markingValue = 39
    RULE_metadataDescription = 40
    RULE_metadataAnnotation = 41
    RULE_metadataTarget = 42
    RULE_viewPosition = 43
    RULE_viewRoute = 44
    RULE_viewTarget = 45
    RULE_extensions = 46
    RULE_templateDefinition = 47
    RULE_additionalTemplateDefinition = 48
    RULE_templateReference = 49
    RULE_color = 50
    RULE_name = 51
    RULE_jsonValue = 52
    RULE_jsonObject = 53
    RULE_jsonArray = 54

    ruleNames = [
        "document",
        "netHeader",
        "compositionHeader",
        "compositionUse",
        "compositionWire",
        "chain",
        "chainNode",
        "arcSegment",
        "arcOperator",
        "additionalChain",
        "chainHandle",
        "place",
        "transition",
        "placeDeclaration",
        "transitionDeclaration",
        "placePort",
        "portDirection",
        "transitionHandler",
        "additionalTransitionHandler",
        "transitionGuard",
        "transitionTimer",
        "transitionTimerBind",
        "transitionTimerMaturity",
        "timerBindName",
        "transitionPriority",
        "transitionOrder",
        "chainOrder",
        "placeAccepts",
        "placeCapacity",
        "arcWeight",
        "arcData",
        "arcPredicate",
        "arcCorrelate",
        "predicateKind",
        "positiveInteger",
        "nonnegativeInteger",
        "initialMarking",
        "additionalInitialMarking",
        "namedMarking",
        "markingValue",
        "metadataDescription",
        "metadataAnnotation",
        "metadataTarget",
        "viewPosition",
        "viewRoute",
        "viewTarget",
        "extensions",
        "templateDefinition",
        "additionalTemplateDefinition",
        "templateReference",
        "color",
        "name",
        "jsonValue",
        "jsonObject",
        "jsonArray",
    ]

    EOF = Token.EOF
    NET = 1
    COMPOSITION = 2
    USE = 3
    AS = 4
    WIRE = 5
    PORT = 6
    INPUT = 7
    OUTPUT = 8
    HANDLER = 9
    GUARD = 10
    ORDER = 11
    TIMER = 12
    CLOCK = 13
    BIND = 14
    MATURITY = 15
    PRIORITY = 16
    ACCEPTS = 17
    CAPACITY_PER_COLOR_KEY = 18
    WEIGHT = 19
    DATA = 20
    PREDICATE = 21
    CEL = 22
    CORRELATE = 23
    MARKING = 24
    INITIAL = 25
    DESCRIPTION = 26
    ANNOTATION = 27
    EXTENSIONS = 28
    VIEW = 29
    POSITION = 30
    ROUTE = 31
    AT_KEYWORD = 32
    ORTHOGONAL = 33
    TRUE = 34
    FALSE = 35
    NULL = 36
    AT = 37
    LPAREN = 38
    RPAREN = 39
    LBRACK = 40
    RBRACK = 41
    LBRACE = 42
    RBRACE = 43
    HYPHEN = 44
    READ_ARROW = 45
    INHIBIT_ARROW = 46
    ARROW = 47
    LEFT_ARROW = 48
    DOLLAR = 49
    STAR = 50
    COLON = 51
    COMMA = 52
    DOT = 53
    POSITIVE_INTEGER = 54
    ZERO = 55
    NUMBER = 56
    STRING = 57
    IDENT = 58
    LINE_COMMENT = 59
    BLOCK_COMMENT = 60
    WS = 61
    CRLF = 62
    UNSUPPORTED = 63

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class DocumentContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(VelocitronPetriNetParser.EOF, 0)

        def netHeader(self):
            return self.getTypedRuleContext(
                VelocitronPetriNetParser.NetHeaderContext, 0
            )

        def chain(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(VelocitronPetriNetParser.ChainContext)
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.ChainContext, i
                )

        def placeDeclaration(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.PlaceDeclarationContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.PlaceDeclarationContext, i
                )

        def transitionDeclaration(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.TransitionDeclarationContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.TransitionDeclarationContext, i
                )

        def transitionHandler(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.TransitionHandlerContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.TransitionHandlerContext, i
                )

        def transitionGuard(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.TransitionGuardContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.TransitionGuardContext, i
                )

        def transitionTimer(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.TransitionTimerContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.TransitionTimerContext, i
                )

        def transitionTimerBind(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.TransitionTimerBindContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.TransitionTimerBindContext, i
                )

        def transitionTimerMaturity(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.TransitionTimerMaturityContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.TransitionTimerMaturityContext, i
                )

        def transitionPriority(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.TransitionPriorityContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.TransitionPriorityContext, i
                )

        def transitionOrder(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.TransitionOrderContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.TransitionOrderContext, i
                )

        def chainOrder(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.ChainOrderContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.ChainOrderContext, i
                )

        def placePort(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.PlacePortContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.PlacePortContext, i
                )

        def placeAccepts(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.PlaceAcceptsContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.PlaceAcceptsContext, i
                )

        def placeCapacity(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.PlaceCapacityContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.PlaceCapacityContext, i
                )

        def arcWeight(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.ArcWeightContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.ArcWeightContext, i
                )

        def arcData(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.ArcDataContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.ArcDataContext, i
                )

        def arcPredicate(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.ArcPredicateContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.ArcPredicateContext, i
                )

        def arcCorrelate(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.ArcCorrelateContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.ArcCorrelateContext, i
                )

        def initialMarking(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.InitialMarkingContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.InitialMarkingContext, i
                )

        def templateDefinition(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.TemplateDefinitionContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.TemplateDefinitionContext, i
                )

        def namedMarking(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.NamedMarkingContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.NamedMarkingContext, i
                )

        def metadataDescription(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.MetadataDescriptionContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.MetadataDescriptionContext, i
                )

        def metadataAnnotation(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.MetadataAnnotationContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.MetadataAnnotationContext, i
                )

        def viewPosition(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.ViewPositionContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.ViewPositionContext, i
                )

        def viewRoute(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.ViewRouteContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.ViewRouteContext, i
                )

        def extensions(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.ExtensionsContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.ExtensionsContext, i
                )

        def compositionHeader(self):
            return self.getTypedRuleContext(
                VelocitronPetriNetParser.CompositionHeaderContext, 0
            )

        def compositionUse(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.CompositionUseContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.CompositionUseContext, i
                )

        def compositionWire(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VelocitronPetriNetParser.CompositionWireContext
                )
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.CompositionWireContext, i
                )

        def getRuleIndex(self):
            return VelocitronPetriNetParser.RULE_document

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDocument"):
                return visitor.visitDocument(self)
            else:
                return visitor.visitChildren(self)

    def document(self):

        localctx = VelocitronPetriNetParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        self._la = 0  # Token type
        try:
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [-1, 1, 24, 28, 29, 37, 38, 40, 49]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input, 0, self._ctx)
                if la_ == 1:
                    self.state = 110
                    self.netHeader()

                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((_la) & ~0x3F) == 0 and ((1 << _la) & 564462603993090) != 0:
                    self.state = 139
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input, 1, self._ctx)
                    if la_ == 1:
                        self.state = 113
                        self.chain()
                        pass

                    elif la_ == 2:
                        self.state = 114
                        self.placeDeclaration()
                        pass

                    elif la_ == 3:
                        self.state = 115
                        self.transitionDeclaration()
                        pass

                    elif la_ == 4:
                        self.state = 116
                        self.transitionHandler()
                        pass

                    elif la_ == 5:
                        self.state = 117
                        self.transitionGuard()
                        pass

                    elif la_ == 6:
                        self.state = 118
                        self.transitionTimer()
                        pass

                    elif la_ == 7:
                        self.state = 119
                        self.transitionTimerBind()
                        pass

                    elif la_ == 8:
                        self.state = 120
                        self.transitionTimerMaturity()
                        pass

                    elif la_ == 9:
                        self.state = 121
                        self.transitionPriority()
                        pass

                    elif la_ == 10:
                        self.state = 122
                        self.transitionOrder()
                        pass

                    elif la_ == 11:
                        self.state = 123
                        self.chainOrder()
                        pass

                    elif la_ == 12:
                        self.state = 124
                        self.placePort()
                        pass

                    elif la_ == 13:
                        self.state = 125
                        self.placeAccepts()
                        pass

                    elif la_ == 14:
                        self.state = 126
                        self.placeCapacity()
                        pass

                    elif la_ == 15:
                        self.state = 127
                        self.arcWeight()
                        pass

                    elif la_ == 16:
                        self.state = 128
                        self.arcData()
                        pass

                    elif la_ == 17:
                        self.state = 129
                        self.arcPredicate()
                        pass

                    elif la_ == 18:
                        self.state = 130
                        self.arcCorrelate()
                        pass

                    elif la_ == 19:
                        self.state = 131
                        self.initialMarking()
                        pass

                    elif la_ == 20:
                        self.state = 132
                        self.templateDefinition()
                        pass

                    elif la_ == 21:
                        self.state = 133
                        self.namedMarking()
                        pass

                    elif la_ == 22:
                        self.state = 134
                        self.metadataDescription()
                        pass

                    elif la_ == 23:
                        self.state = 135
                        self.metadataAnnotation()
                        pass

                    elif la_ == 24:
                        self.state = 136
                        self.viewPosition()
                        pass

                    elif la_ == 25:
                        self.state = 137
                        self.viewRoute()
                        pass

                    elif la_ == 26:
                        self.state = 138
                        self.extensions()
                        pass

                    self.state = 143
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 144
                self.match(VelocitronPetriNetParser.EOF)
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.compositionHeader()
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == 3 or _la == 5:
                    self.state = 148
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [3]:
                        self.state = 146
                        self.compositionUse()
                        pass
                    elif token in [5]:
                        self.state = 147
                        self.compositionWire()
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 152
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 153
                self.match(VelocitronPetriNetParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NetHeaderContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NET(self):
            return self.getToken(VelocitronPetriNetParser.NET, 0)

        def name(self):
            return self.getTypedRuleContext(VelocitronPetriNetParser.NameContext, 0)

        def STRING(self):
            return self.getToken(VelocitronPetriNetParser.STRING, 0)

        def getRuleIndex(self):
            return VelocitronPetriNetParser.RULE_netHeader

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitNetHeader"):
                return visitor.visitNetHeader(self)
            else:
                return visitor.visitChildren(self)

    def netHeader(self):

        localctx = VelocitronPetriNetParser.NetHeaderContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 2, self.RULE_netHeader)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(VelocitronPetriNetParser.NET)
            self.state = 158
            self.name()
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 57:
                self.state = 159
                self.match(VelocitronPetriNetParser.STRING)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CompositionHeaderContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMPOSITION(self):
            return self.getToken(VelocitronPetriNetParser.COMPOSITION, 0)

        def name(self):
            return self.getTypedRuleContext(VelocitronPetriNetParser.NameContext, 0)

        def getRuleIndex(self):
            return VelocitronPetriNetParser.RULE_compositionHeader

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitCompositionHeader"):
                return visitor.visitCompositionHeader(self)
            else:
                return visitor.visitChildren(self)

    def compositionHeader(self):

        localctx = VelocitronPetriNetParser.CompositionHeaderContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 4, self.RULE_compositionHeader)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(VelocitronPetriNetParser.COMPOSITION)
            self.state = 163
            self.name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CompositionUseContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USE(self):
            return self.getToken(VelocitronPetriNetParser.USE, 0)

        def STRING(self):
            return self.getToken(VelocitronPetriNetParser.STRING, 0)

        def AS(self):
            return self.getToken(VelocitronPetriNetParser.AS, 0)

        def IDENT(self):
            return self.getToken(VelocitronPetriNetParser.IDENT, 0)

        def getRuleIndex(self):
            return VelocitronPetriNetParser.RULE_compositionUse

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitCompositionUse"):
                return visitor.visitCompositionUse(self)
            else:
                return visitor.visitChildren(self)

    def compositionUse(self):

        localctx = VelocitronPetriNetParser.CompositionUseContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 6, self.RULE_compositionUse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(VelocitronPetriNetParser.USE)
            self.state = 166
            self.match(VelocitronPetriNetParser.STRING)
            self.state = 167
            self.match(VelocitronPetriNetParser.AS)
            self.state = 168
            self.match(VelocitronPetriNetParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CompositionWireContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WIRE(self):
            return self.getToken(VelocitronPetriNetParser.WIRE, 0)

        def IDENT(self, i: int = None):
            if i is None:
                return self.getTokens(VelocitronPetriNetParser.IDENT)
            else:
                return self.getToken(VelocitronPetriNetParser.IDENT, i)

        def DOT(self, i: int = None):
            if i is None:
                return self.getTokens(VelocitronPetriNetParser.DOT)
            else:
                return self.getToken(VelocitronPetriNetParser.DOT, i)

        def place(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(VelocitronPetriNetParser.PlaceContext)
            else:
                return self.getTypedRuleContext(
                    VelocitronPetriNetParser.PlaceContext, i
                )

        def ARROW(self):
            return self.getToken(VelocitronPetriNetParser.ARROW, 0)

        def getRuleIndex(self):
            return VelocitronPetriNetParser.RULE_compositionWire
